# Pipelinex

./: .gitignore  CLAUDE.md  LICENSE  PIPELINE_SPEC.md  README.md  pyproject.toml
.claude/: settings.local.json
cv-pipeline/: SKILL.md
cv-pipeline/input/: education.md  experience.md  profile.md
cv-pipeline/step-01-fetch-job/: SKILL.md
cv-pipeline/step-02-load-profile/: SKILL.md
cv-pipeline/step-04-write-cv/: SKILL.md
cv-pipeline/tools/fetch_page/: run.py
cv-pipeline/tools/render_pdf/: tool.json
doc-pipeline/: SKILL.md
doc-pipeline/input/: intro-to-ml.txt
doc-pipeline/step-01-ingest/: SKILL.md
doc-pipeline/step-02-process/sub-01-chunk/: SKILL.md
doc-pipeline/step-03-validate/: SKILL.md
doc-pipeline/step-05-partial-output/: SKILL.md
doc-pipeline/tools/send_slack/: run.py  tool.json
docs/: cli.md  context-management.md  examples.md  execution-patterns.md  getting-started.md  human-input.md  index.md  pipeline-structure.md  sandbox.md  state.md  tools.md
examples/context-test-pipeline/: SKILL.md  pipeline.yaml
examples/cv-pipeline/: .env.example  pipeline.yaml
examples/doc-pipeline/: .env.example  pipeline.yaml
examples/research-pipeline/: SKILL.md  pipeline.yaml
examples/self-reflection-test/: pipeline.yaml
examples/test-pipeline/: SKILL.md  pipeline.yaml
src/pipelinex/: cli.py  context_mgr.py  loader.py  logger.py  model.py  runner.py  scaffold.py  state.py
tests/: test_builtin.py  test_context_mgr.py  test_executor.py  test_loader.py  test_model.py  test_resolver.py  test_runner_utils.py  test_self_reflection.py  test_state.py
(+36 files in other folders)
